[gd_scene load_steps=9 format=3 uid="uid://b7ctatqya84u"]

[ext_resource type="Script" path="res://scenes/CharacterBody2D.gd" id="1_kf7rr"]
[ext_resource type="Texture2D" uid="uid://dwtek4bqnjkei" path="res://sprites/indicator.png" id="2_x05bu"]
[ext_resource type="Texture2D" uid="uid://dq6xer3qqlv2h" path="res://sprites/bar.png" id="3_x2vfq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_muh2i"]
size = Vector2(27.5, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nr4gy"]
size = Vector2(18, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_5gyt5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_x05bu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l1u0k"]
size = Vector2(28, 72)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kv0l2"]
size = Vector2(14.25, 57.75)

[node name="Node2D" type="Node2D"]
metadata/_edit_horizontal_guides_ = []

[node name="GreenArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GreenArea"]
position = Vector2(183, 188)
shape = SubResource("RectangleShape2D_muh2i")
debug_color = Color(0, 0.643137, 0.317647, 0.419608)

[node name="ColorRect" type="ColorRect" parent="GreenArea"]
offset_left = 169.0
offset_top = 163.0
offset_right = 197.0
offset_bottom = 212.0
color = Color(0.533333, 1, 0.478431, 1)

[node name="BlueArea" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlueArea"]
position = Vector2(356, 187)
shape = SubResource("RectangleShape2D_nr4gy")

[node name="ColorRect" type="ColorRect" parent="BlueArea"]
offset_left = 347.0
offset_top = 163.0
offset_right = 365.0
offset_bottom = 214.0
color = Color(0, 1, 1, 1)

[node name="Bar" type="Sprite2D" parent="."]
position = Vector2(306, 188)
scale = Vector2(0.465934, 0.416667)
texture = ExtResource("3_x2vfq")

[node name="indicator" type="CharacterBody2D" parent="."]
position = Vector2(404, -43)
script = ExtResource("1_kf7rr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="indicator"]
position = Vector2(-130, 262)
scale = Vector2(0.372611, 0.372611)
sprite_frames = SubResource("SpriteFrames_5gyt5")

[node name="Area2D" type="Area2D" parent="indicator"]
position = Vector2(-186, -47)

[node name="CollisionShape2D" type="CollisionShape2D" parent="indicator/Area2D"]
position = Vector2(57, 315)
shape = SubResource("RectangleShape2D_l1u0k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="indicator"]
position = Vector2(-129, 268)
shape = SubResource("RectangleShape2D_l1u0k")

[node name="Label" type="Label" parent="indicator"]
offset_left = -165.0
offset_top = 310.0
offset_right = -90.0
offset_bottom = 336.0
horizontal_alignment = 1

[node name="collision walls" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision walls"]
position = Vector2(493, 192)
shape = SubResource("RectangleShape2D_kv0l2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="collision walls"]
position = Vector2(94, 189)
shape = SubResource("RectangleShape2D_kv0l2")

[node name="NumofSuccess" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 99.0
offset_top = 135.0
offset_right = 139.0
offset_bottom = 158.0

[connection signal="area_entered" from="GreenArea" to="indicator" method="_on_green_area_area_entered"]
[connection signal="area_entered" from="GreenArea" to="indicator" method="_on_areatest_area_entered"]
[connection signal="area_exited" from="GreenArea" to="indicator" method="_on_green_area_area_exited"]
[connection signal="area_exited" from="GreenArea" to="indicator" method="_on_areatest_area_exited"]
[connection signal="area_shape_entered" from="GreenArea" to="indicator" method="_on_areatest_area_shape_entered"]
[connection signal="area_entered" from="BlueArea" to="indicator" method="_on_blue_area_area_entered"]
[connection signal="area_exited" from="BlueArea" to="indicator" method="_on_blue_area_area_exited"]
[connection signal="area_entered" from="indicator/Area2D" to="indicator" method="_on_area_2d_area_entered"]
[connection signal="area_shape_entered" from="indicator/Area2D" to="indicator" method="_on_area_2d_area_shape_entered"]
